@@ -692,6 +692,10 @@ namespace video
 		void getTexture(GLuint stage, GLenum& type, bool& fixedPipeline);
 
 		void setTexture(GLuint stage, GLenum type, bool fixedPipeline);
+		
+		// Viewport calls.
+		
+		void setViewport(GLint viewportX, GLint viewportY, GLsizei viewportWidth, GLsizei viewportHeight);		
 
 	private:
 		COpenGLDriver* Driver;
@@ -728,6 +732,11 @@ namespace video
 		const ITexture* Texture[MATERIAL_MAX_TEXTURES];
 		GLenum TextureType[MATERIAL_MAX_TEXTURES];
 		bool TextureFixedPipeline[MATERIAL_MAX_TEXTURES];
+		
+		GLint ViewportX;
+		GLint ViewportY;
+		GLsizei ViewportWidth;
+		GLsizei ViewportHeight;		
 	};
 
 } // end namespace video
